--- a/Waiting/.classpath
+++ b/Waiting/.classpath
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_291">
-		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/good/Desktop/애림온유/resource/apache-tomcat-9.0.45-windows-x64/apache-tomcat-9.0.45/bin/tomcat-juli.jar"/>
-	<classpathentry kind="lib" path="C:/Users/good/Desktop/애림온유/resource/json/새 폴더/json-simple-1.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/good/Desktop/애림온유/resource/mysql-connector-java-8.0.23/mysql-connector-java-8.0.23/mysql-connector-java-8.0.23.jar"/>
+	<classpathentry kind="lib" path="C:/Users/rkdhs/OneDrive/바탕 화면/애림온유/resource/apache-tomcat-9.0.46/bin/tomcat-juli.jar"/>
+	<classpathentry kind="lib" path="C:/Users/rkdhs/OneDrive/바탕 화면/애림온유/resource/json/새 폴더/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/rkdhs/OneDrive/바탕 화면/애림온유/resource/mysql-connector-java-5.1.46/mysql-connector-java-5.1.46.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
