--- a/Waiting/.classpath
+++ b/Waiting/.classpath
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/rkdhs/OneDrive/바탕 화면/애림온유/resource/apache-tomcat-9.0.46/bin/tomcat-juli.jar"/>
 	<classpathentry kind="lib" path="C:/Users/rkdhs/OneDrive/바탕 화면/애림온유/resource/json/새 폴더/json-simple-1.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rkdhs/OneDrive/바탕 화면/애림온유/resource/mysql-connector-java-5.1.46/mysql-connector-java-5.1.46.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/rkdhs/OneDrive/바탕 화면/애림온유/resource/apache-tomcat-9.0.46/bin/tomcat-juli.jar"/>
+	<classpathentry kind="lib" path="C:/Users/rkdhs/OneDrive/바탕 화면/애림온유/resource/mysql-connector-java-5.1.46/mysql-connector-java-5.1.46-bin.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
