--- a/Waiting/WebContent/WEB-INF/web.xml
+++ b/Waiting/WebContent/WEB-INF/web.xml
@@ -9,6 +9,16 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+  <servlet-name>UserFrontController</servlet-name>
+  <servlet-class>FrontController.UserFrontController</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  <servlet-name>UserFrontController</servlet-name>
+  <url-pattern>*.us</url-pattern>
+  </servlet-mapping>
+  
   <resource-ref>
     <res-ref-name>jdbc/mysql</res-ref-name>
     <res-type>javax.sql.DataSource</res-type>
